src/rfx/tests/preprocessor/Error.approved.out
SourceOutput:[
]
Diagnostic:[
    ../src/rfx/tests/preprocessor/Error.rfx(10): error 15900: #error: This isn't valid!
    #error This isn't valid!
     ^~~~~
]
