src/rfx/tests/preprocessor/Error.rfx
// :RUN_RFXC -P %STD_OUTPUT% %INPUT%
// #error support

#define FIRST 0

#if FIRST
#error Not this one!
#else

#error This isn't valid!

#endif